blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-blue
  namespace: flask-devops-platform
  labels:
    app: flask
    version: blue

spec:
  replicas: 3

  selector:
    matchLabels:
      app: flask
      version: blue

  template:
    metadata:
      labels:
        app: flask
        version: blue

    spec:
      containers:
        - name: flask
          image: ghcr.io/gsmohamedfarooq/flask-devops-platform:f4195cd2eba10b550d3cb459fbe735fdf2a77265
          ports:
            - containerPort: 5000
