service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-devops-platform
  namespace: flask-devops-platform
  labels:
    app: flask
spec:
  selector:
    app: flask
    version: green

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: ClusterIP
